unused links removed

--- a/lib/dashboard/dashboard.ejs
+++ b/lib/dashboard/dashboard.ejs
@@ -21,10 +21,8 @@
 			&nbsp;<%= sleep %> sleep quality<br>
 		</h1>
 		<br>
-		<a href="/profile" class="btn btn-default btn-sm">Profile</a>
+		<a href="/profile" class="btn btn-default btn-sm">Connections</a>
 		<a href="/" class="btn btn-default btn-sm">Home</a>
-		<a href="/scoreboard" class="btn btn-default btn-sm">Scoreboard</a>
-		<a href="/addtoteam" class="btn btn-default btn-sm">Join a Team</a>
 	</div>
 	
 </div>
